# ctadl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE.txt  MANIFEST.in  README.md  ctadl.nix  flake.nix  indexers.nix  plugins.nix  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
.release_scripts/: make_images
docs/: DevGuide.rst  SARIF.md  SARIF.rst  analysis.rst  cli_help.rst  conf.py  debugging.md  debugging.rst  dev-guide.md  globals.md  index.rst  install.rst  intro.rst  models.md  models.rst  phases.md  plugins.md  requirements.txt  souffle-build-windows.md  star.md  star.rst  tutorial.md  usage.rst  windows.rst  workflows.md  workflows.rst
docs/dev/: pcode-translation.md
nix/: docker.nix  no-kvm-overlay.nix  singularity-overlay.nix  singularity.nix
nix/export/: networkx.nix
nix/ghidra/: plugin.nix
nix/nginx/: nginx-wllvm.nix  nginx.nix
nix/sarif-multitool/: default.nix
nix/souffle/: common.nix  git-and-completion.patch  packages.nix  remove-cpack.patch  remove-index-warning.patch  remove-lld.patch  souffle-2.3-remove-Werror.patch  souffle-2.3-sources.patch  souffle-2.4.patch  souffle2.0.2.nix  souffle2.1.nix  souffle2.2.nix  souffle2.3-warning.patch  souffle2.3.nix  souffle2.4.1.nix  souffle2.4.nix  soufflegit.nix
nix/taintfront/: taintfront-plugin.nix  taintfront.nix
plugins/ghidra/: MANIFEST.in  README.md  setup.cfg
plugins/ghidra/src/ctadl_ghidra_fact_generator_plugin/: __init__.py
plugins/networkx-export/: MANIFEST.in  README.md  setup.cfg
plugins/networkx-export/src/ctadl_networkx_export_plugin/: __init__.py
plugins/taint-front/: MANIFEST.in  README.md  setup.cfg  setup.py
plugins/taint-front/src/ctadl_taint_front_fact_generator_plugin/: __init__.py
refimpl/: taint.dl
src/ctadl/: VERSION  __init__.py  models.py
src/ctadl/models/: ctadl-model-generator.schema.json
src/ctadl/models/jadx/: default-index.json  default-query.json
src/ctadl/models/pcode/: default-index.json  default-query.json
src/ctadl/souffle-logic/: config.dl  ctadl_ir_types.dl  ctadl_schema.dl  export.dl  functors.cpp  graph_schema.dl  imports.dl  macros.dl  taint_schema.dl
src/ctadl/souffle-logic/analysis/: index.dl
src/ctadl/souffle-logic/graph/: access_path.dl  callgraph.dl  dataflow.dl  dataflow_graph.dl  declarations.dl  export.dl  fieldprop.dl  fieldprop_ref.dl  globals.dl  hybrid_inlining.dl  import.dl  star.dl
src/ctadl/souffle-logic/information-flow/: declarations.dl  export.dl  java-transfer.dl  query.dl
src/ctadl/souffle-logic/jadx/: android-intents.dl  customquery.dl  export.dl  importdb.dl  index.dl  intent-notes.txt  jadx-fact-decls.dl  jadx-fact-imports.dl  jadx_lang.dl
src/ctadl/souffle-logic/pcode/: ExportPCodeForCTADL.java  analyzeHeadlessBigMem  analyzeHeadlessBigMem.bat  analyze_headless.sh  declarations.dl  export.dl  generictaintquery.dl  import.dl  importdb.dl  index.dl  pcode_lang.dl  taintquery.dl  typeprop.dl  types.dl  vtable.dl
src/ctadl/util/: diff.py  functions.py  graph.py  lazy_logging.py  merge.py  sortedcollection.py
src/ctadl/vis/: __init__.py  formatters.py  model.py  richutils.py  sarif.py  sarifpaths.py  taintgraph.py  types.py
taint-front/: .gitignore  GenFacts.ml  Lex.mll  Parse.mly  README.md  Syntax.ml  alias-rule.d2  alias1.tnt  alias2.tnt  alias3.tnt  alias4.tnt  alias6.tnt  backward.tnt  bslice1.tnt  bslice2.tnt  compositional-ctx.tnt  compositional-ctx2.tnt  compositional-ctx3.tnt  compositional-ctx4.tnt  dune  dune-project  ex-vtable.tnt  ex3.tnt  flake.nix  global1.tnt  global3.tnt  indirect2.tnt  indirect3.tnt  ll.tnt  paper-ex.tnt  recursion2.tnt  sanitizer1.tnt  slice1.tnt  star-query.tnt  star1.tnt  star2.tnt  star3.tnt  star4.tnt  summarytest.ml  taint.ml  (+1 more)
tests/: androidtest-query.json  custom_index.dl  field-source.json  find-field-query.json  index_nginx.dl  query_nginx.dl  taint_front_compositional_ctx.json  taint_front_compositional_ctx2.json  taint_front_compositional_ctx4.json  taint_front_global1.json  taint_intent.json  test_ctadlir.py  test_query.json  test_sarif_paths.py
tests/java/: ArrayTest.java  ArrayTest.json
tests/taint-front/: README.md  alias1.json  alias1.tnt  alias2.json  alias2.tnt  ex4.tnt  global2.tnt  indirect1.json  indirect1.tnt  indirect4.tnt  sanitizer1.tnt
utils/: gen_help_docs.py  hashdl.py  merge_summaries.py  sarif_vscode_highlight.py  souffle_windows_build.ps1
(+13 files in other folders)
