[metadata]
name = ctadl
version = attr: ctadl.__version__
description = CTADL Static Taint Analyzer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sandialabs/ctadl
project_urls =
    Bug Tracker = https://github.com/sandialabs/ctadl/issues
classifiers =
    Programming Language :: Python :: 3.9
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX

[options]
# It's important that we install as an uncompressed dir structure, not a zip
# (egg). Souffle needs access to the entire datalog directory structure in order
# to run. If that dir structure is in a zipfile, we all lose.
zip_safe = False
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >=3.9
install_requires =
scripts =
    bin/ctadl
    bin/dctadl

[options.packages.find]
where = src

[options.extras_require]
jadx-fact-generator =
    ctadl-jadx-fact-generator-plugin>=0.6.2

ghidra-fact-generator =
    ctadl-ghidra-fact-generator-plugin>=0.0.2

taint-front-fact-generator =
    ctadl-taint-front-fact-generator-plugin>=0.0.2

networkx-exporter =
    ctadl-networkx-export-plugin>=0.0.1
