[metadata]
name = ctadl-ghidra-fact-generator_plugin
version = attr: ctadl_ghidra_fact_generator_plugin.version
description = CTADL GHIDRA Pcode fact generator plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sandialabs/ctadl
project_urls =
    Bug Tracker = https://github.com/sandialabs/ctadl/issues
classifiers =
    Programming Language :: Python :: 3.9
    Environment :: Console
    Environment :: Plugins
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
license_files = LICENSE.txt

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.9
install_requires =

[options.packages.find]
where = src
