[metadata]
name = ctadl-networkx-export-plugin
version = attr: ctadl_networkx_export_plugin.version
description = Exports the CTADL database to networkx format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sandialabs/ctadl
project_urls =
    Bug Tracker = https://github.com/sandialabs/ctadl/issues
classifiers =
    Programming Language :: Python :: 3.9
    Environment :: Console
    Environment :: Plugins
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.9
install_requires =
    networkx >= 2.8.6

[options.packages.find]
where = src
