[metadata]
name = ctadl-taint-front-fact-generator_plugin
version = attr: ctadl_taint_front_fact_generator_plugin.version
description = CTADL TAINT-FRONT fact generator plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sandialabs/ctadl
project_urls =
    Bug Tracker = https://github.com/sandialabs/ctadl/issues
classifiers =
    Programming Language :: Python :: 3.9
    Environment :: Console
    Environment :: Plugins
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.9
install_requires =

[options.packages.find]
where = src
